--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                                  <a class="nav-link" href="index.html">Home</a>
                               </li>
                               <li class="nav-item">
-                                 <a class="nav-link" href="about.html">Sobre</a>
+                                 <a class="nav-link" href="about.html">Sobre Nós</a>
                               </li>
                               <li class="nav-item">
                                  <a class="nav-link" href="room.html">Produtos</a>
@@ -122,9 +122,9 @@
             </a>
             <a class="carousel-control-next" href="#myCarousel" role="button" data-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Próx</span>
+            <span class="sr-only">Próximo</span>
             </a>
-      </section>
+         </div>
       <!-- end banner -->
       <!-- about -->
       <div class="about">
