--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                </div>
                <div class="col-md-7">
                   <div class="about_img">
-                     <figure><img src="images/loja.svg" alt="#"/></figure>
+                     <figure><img src="images/fachada.jpg" alt="#"/></figure>
                   </div>
                </div>
             </div>
@@ -562,12 +562,7 @@
                         <li><a href="contact.html">Contato</a></li>
                      </ul>
                   </div>
-                  <div class="col-md-4">
-                     <h3>News letter</h3>
-                     <form class="bottom_form">
-                        <input class="enter" placeholder="coloque seu email" type="text" name="coloque seu email">
-                        <button class="sub_btn">Inscreva-se</button>
-                     </form>
+                  <div class="col-md-4">                     
                      <ul class="social_icon">
                         <li><a href="#"><i class="fa fa-facebook" aria-hidden="true"></i></a></li>
                         <li><a href="#"><i class="fa fa-linkedin" aria-hidden="true"></i></a></li>
