--- a/index.html
+++ b/index.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
    <head>
+      <script type="text/javascript">
+         window.onload = function(){
+         (function(d, script) {
+         script = d.createElement('script');
+         script.type = 'text/javascript';
+         script.async = true;
+         script.src = 'https://w.app/widget-v1/X0bvHz.js';
+         d.getElementsByTagName('head')[0].appendChild(script);
+         }(document));
+         };
+         </script>
+   
       <!-- basic -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,6 +39,7 @@
       <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fancybox/2.1.5/jquery.fancybox.min.css" media="screen">
       <!-- Google tag (gtag.js) -->
       <script async src="https://www.googletagmanager.com/gtag/js?id=AW-584157939"></script>
+      
       <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
@@ -575,7 +588,6 @@
                <div class="container">
                   <div class="row">
                      <div class="col-md-10 offset-md-1">
-                        
                         <p>
                         © 2024 All Rights Reserved. Design by <a href="https://html.design/"> Magestic x Coded</a>
                         <br><br>
@@ -587,7 +599,7 @@
                </div>
             </div>
          </div>
-      </footer>
+      </footer>      
       <!-- end footer -->
       <!-- Javascript files-->
       <script src="js/jquery.min.js"></script>
