--- a/room.html
+++ b/room.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
 <html lang="pt-br">
    <head>
+      <script type="text/javascript">
+         window.onload = function(){
+         (function(d, script) {
+         script = d.createElement('script');
+         script.type = 'text/javascript';
+         script.async = true;
+         script.src = 'https://w.app/widget-v1/X0bvHz.js';
+         d.getElementsByTagName('head')[0].appendChild(script);
+         }(document));
+         };
+         </script>
       <!-- basic -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -113,66 +124,96 @@
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/shark.png" alt="#"/></figure>
+                        <figure><img src="images/bc-92.png" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>BC-92</h3>
+                        <p>Aplicações Gerais
+                           Residências
+                           Chácaras
+                           Abastecimento predial
+                           Agricultura
+                           Indústrias
+                           Sistemas de refrigeração (somente linha T)
+                        </p>
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room2.jpg" alt="#"/></figure>
+                        <figure><img src="images/bc-i.png" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>MCI</h3>
+                        <p>Aplicações Gerais
+                           Produtos químicos
+                           Lavação de gases
+                           Tratamento de efluentes
+                           Vinhoto
+                           Indústrias
+                        </p>
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room3.jpg" alt="#"/></figure>
+                        <figure><img src="images/BCR.png" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>BCR</h3>
+                        <p>Aplicações Gerais
+                           Residências
+                           Fontes e cascatas
+                           Chácaras
+                        </p>
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room4.jpg" alt="#"/></figure>
+                        <figure><img src="images/brava.png" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>Brava</h3>
+                        <p>Motobombas para líquidos com sólidos em suspensão, conforme tamanho especificado na tabela.
+                           BRAVA D: Drenagem. BRAVA DV: Drenagem Vórtex. Boia Elétrica.Esgoto. </p>
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room5.jpg" alt="#"/></figure>
+                        <figure><img src="images/me-2.png" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
                         <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <p>Aplicações Gerais
+                           Abastecimento predial
+                           Irrigação
+                           Lavação de ambientes, veículos e máquinas
+                           Alimentação de caldeiras
+                           Transporte de água a longa distância
+                           Indústrias
+                        </p>
                      </div>
                   </div>
                </div>
                <div class="col-md-4 col-sm-6">
                   <div id="serv_hover"  class="room">
                      <div class="room_img">
-                        <figure><img src="images/room6.jpg" alt="#"/></figure>
+                        <figure><img src="images/bpi-22.png" alt="#"/></figure>
                      </div>
                      <div class="bed_room">
-                        <h3>Bed Room</h3>
-                        <p>If you are going to use a passage of Lorem Ipsum, you need to be sure there </p>
+                        <h3>BPI-22</h3>
+                        <p>Aplicações Gerais
+                           Rede de hidrantes
+                           Rede de sprinklers
+                           Sistema fixo de espuma adaptado à rede de hidrantes
+                           Sistemas de prevenção e combate contra incêndio
+                        </p>
                      </div>
                   </div>
                </div>
