--- a/about.html
+++ b/about.html
@@ -1,6 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt-br">
    <head>
+      <script type="text/javascript">
+         window.onload = function(){
+         (function(d, script) {
+         script = d.createElement('script');
+         script.type = 'text/javascript';
+         script.async = true;
+         script.src = 'https://w.app/widget-v1/X0bvHz.js';
+         d.getElementsByTagName('head')[0].appendChild(script);
+         }(document));
+         };
+         </script>
+      
       <!-- basic -->
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
