--- a/blog.html
+++ b/blog.html
@@ -125,32 +125,26 @@
                <div class="col-md-4">
                   <div class="blog_box">
                      <div class="blog_img">
-                        <figure><img src="images/genclor.png" alt="#"/></figure>
+                        <figure><img src="images/bomba-piscina.png" alt="#"/></figure>
                      </div>
                      <div class="blog_room">
-                        <h3>GENCLOR® CLORO GRANULADO ESTABILIZADO GENCO®</h3>
-                        <span>Embalagens:   1 kg, 7.5 kg, 10 kg e 40 kg </span>
-                        <p>Dicloro concentrado, rende duas vezes mais, além de ser um poderoso agente desinfetante e oxidante com rápida dissolução e ação instantânea. Possui estabilizante que inibe a degradação do cloro pelos raios UV. Indicado para piscinas residenciais e institucionais.
-                        Embalagens:   1 kg, 7.5 kg, 10 kg e 40 kg  
-                        Tipo de Cloro:  Dicloro
-                        Teor Cloro  Ativo: 56%  
-                        Alcalinidade total recomendada: 100 a 120 ppm           
-                        Dosagem: 2 a 3 g/m³
-                        Validade: 2 anos após a data de fabricação</p>
+                        <h3>BOMBA SÉRIE B – AUTO-ESCORVANTE EM TERMOPLÁSTICO</h3>
+                        <span>São indicadas para utilização com os filtros de areia da série TP e SC.</span>
+                        <p>Equipamentos Trifásicos normalmente são utilizados em condomínios, indústrias e clubes, necessitam de 3 cabos de alimentação.
+                           Equipamentos Monofásicos normalmente são utilizados em residências, necessitam de 2 cabos de alimentação.</p>
                      </div>
                   </div>
                </div>
                <div class="col-md-4">
                   <div class="blog_box">
                      <div class="blog_img">
-                        <figure><img src="images/hth.png" alt="#"/></figure>
+                        <figure><img src="images/bomba-piscina1.png" alt="#"/></figure>
                      </div>
                      <div class="blog_room">
-                        <h3>HTH™ Cloro Concentrado Tradicional</h3>
-                        <span>Disponível nas embalagens de 1kg, 10kg e 45kg.
-                           VALIDADE: 24 meses </span>
-                        <p>O HTH™ Cloro Concentrado tradicional possui 65% de cloro ativo e é uma fórmula altamente eficaz na eliminação de bactérias da água da piscina. Além disso, possui Ação Superior do Ativo, que significa que todo o cloro está disponível para agir na purificação da água. Ideal para piscinas com grande fluxo de pessoas. 
-                           HTH™ do tamanho ideal para você: agora também na embalagem de 1kg</p>
+                        <h3>Bomba Piscina Jacuzzi 3B-M 3,0CV</h3>
+                        <span> 3B-T 3,0CV Monofásicos Trifásica </span>
+                        <p>Equipamentos Trifásicos normalmente são utilizados em condomínios, indústrias e clubes, necessitam de 3 cabos de alimentação.
+                           Equipamentos Monofásicos normalmente são utilizados em residências, necessitam de 2 cabos de alimentação.</p>
                      </div>
                   </div>
                </div>
