--- a/room.html
+++ b/room.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="pt-br">
    <head>
+      <!-- Google tag (gtag.js) -->
+      <script async src="https://www.googletagmanager.com/gtag/js?id=AW-584157939">
+      </script>
+      <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'AW-584157939');
+      </script>
       <script type="text/javascript">
          window.onload = function(){
          (function(d, script) {
